[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragdoll"
version = "0.0.1"
dependencies = [
  "docling",
  "fastembed-gpu",
  "jsonargparse[signatures,toml]",
  "pydantic",
  "pyzotero",
  "qdrant_client",
  "rich",
]

[project.scripts]
ragdoll = "ragdoll.main:main"
